--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export -o extensions/dist",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@types/chrome": "^0.0.133",
+    "chrome": "^0.1.0",
+    "framer-motion": "^4",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
